--- a/jokeGeneratorAPI/jokeGenerator.html
+++ b/jokeGeneratorAPI/jokeGenerator.html
@@ -1,4 +1,21 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./jokeGenerator.css">
+    <title>JokeGenerator</title>
+</head>
+<body>
+    <div class="wrapper">
+        <span>&#128514</span>
+        <p id="joke"></p>
+        <button class="button" id="btn">Get Random Joke</button>
+    </div>
+    
+    <script src="./jokeGenerator.js"></script>
+    </body>
+</html>
 
 
 
